k8/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: is-ruby-dead
    app.kubernetes.io/name: is-ruby-dead
    version: v1.0.0
  name: is-ruby-dead
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: is-ruby-dead
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: is-ruby-dead
        app.kubernetes.io/name: is-ruby-dead
        version: v1.0.0
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: web
        image: pbstriker38/is-ruby-dead:v1.0.0
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          capabilities:
            drop: ["ALL"]
        ports:
        - containerPort: 9292
          protocol: TCP
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 50m
            memory: 100Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccount: is-ruby-dead
      serviceAccountName: is-ruby-dead
      terminationGracePeriodSeconds: 30
