k8/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: is-ruby-dead
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9292
  selector:
    app: is-ruby-dead
  type: ClusterIP
